--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ opencensus==0.5.0
 google-cloud-trace==0.20.2
 opencensus-ext-prometheus==0.2.1
 opencensus-ext-grpc==0.2.0
+prometheus-client==0.6.0
